# CASLO

./: .gitignore  Cargo.toml  README.md
crates/caslo-core/: Cargo.toml
crates/caslo-core/src/: lib.rs
crates/caslo-core/src/control/: attitude.rs  indi.rs  mod.rs  position.rs  quadrotor_tracker.rs  trajectory.rs
crates/caslo-core/src/dynamics/: cable.rs  load.rs  mod.rs  quadrotor.rs  system.rs
crates/caslo-core/src/estimation/: cable_estimator.rs  ekf.rs  initializer.rs  load_estimator.rs  mod.rs
crates/caslo-core/src/kinematics/: constraint.rs  mod.rs
crates/caslo-core/src/math/: integrator.rs  mod.rs  quaternion.rs  rotation.rs  sphere.rs
crates/caslo-core/src/simulation/: config.rs  mod.rs  sensors.rs  simulator.rs
crates/caslo-core/tests/: paper_validation.rs
crates/caslo-planner/: Cargo.toml  build.rs
crates/caslo-planner/codegen/: caslo_ocp.py  requirements.txt
crates/caslo-planner/examples/: full_system.rs  visualize.rs  visualize_sim.rs
crates/caslo-planner/src/: acados_ffi.rs  config.rs  constraints.rs  controller.rs  integration.rs  lib.rs  ocp.rs  scenarios.rs  solver.rs  trajectory.rs
crates/caslo-planner/tests/: acados_minimal_test.rs  paper_validation.rs
docs/: ARCHITECTURE_COMPARISON.md  paper_analysis.md  project_structure.md
